# cewl_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: capture.rs  cli.rs  crawler.rs  entry.rs  html.rs  lib.rs  metadata.rs  tests.rs  tree.rs  words.rs
src/fetcher/: browser_fetcher.rs  mod.rs  static_fetcher.rs
