[package]
name = "cewl"
version = "0.2.5"
edition = "2021"
description = "Custom Word List generator — Rust port of CeWL"
license = "GPL-3.0"
authors = ["CeWL Rust port"]

[[bin]]
name = "cewl"
path = "src/bin/cewl.rs"

[[bin]]
name = "fab"
path = "src/bin/fab.rs"

[dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls", "socks", "json"] }
chromiumoxide = { version = "0.9", default-features = false, features = ["fetcher", "zip8"] }
futures = "0.3"
url = "2.5"
psl = "2.1"
scraper = "0.27.0"
regex = "1.11"
encoding_rs = "0.8"
html-escape = "0.2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
mime_guess = "2.0"
indexmap = "2.7"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.9"
digest_auth = "0.3"
ctrlc = "3.4"
anyhow = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tempfile = "3.16"